# Portal

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_FIX.md  EXECUTION_STRATEGY.md  IDENTITY_SECURITY.md  IMPLEMENTATION_SUMMARY.md  PITCH_DECK.md  QUICKSTART.md  README.md  RESUMEN_INTEGRACION_P2P.md  ROADMAP.md  STRUCTURE.md  TRINITY3_DISCOVERY.md  WHY_AURORA_WILL_SUCCEED.md  aurora-explorer.html  aurora_wasm_client.d.ts  aurora_wasm_client.js  aurora_wasm_client_bg.wasm  aurora_wasm_client_bg.wasm.d.ts  auth.html  genesis_output.txt  index.html  package.json  passkey-demo.html  reset-identity.html  serve.ps1  test-passkey.html  test-signature.js  verify-deployment.ps1
.github/instructions/: ProgramimgParadimg.instructions.md
.github/workflows/: main.yaml
Docs/: ADAPTIVE_MONETARY_POLICY.md  ADAPTIVE_SYSTEM_EXECUTIVE_SUMMARY.md  AuroraPortal.md  DECENTRALIZED_AUTH.md  EXECUTIVE_SUMMARY.md  MANIFESTO.md  MONETARY_POLICIES_COMPARISON.md  P2P_AND_BLOCKCHAIN_ARCHITECTURE.md  README.md  TRI_TOKEN_ECONOMICS.md
Infrastructure/: main.yml  validate_yaml.py
Infrastructure/IE/: ARMONIZADOR_DOCUMENTATION.md  ARMONIZADOR_RESUMEN.md  BENCHMARK_CARD.md  BENCHMARK_REVIEW.md  BENCHMARK_TEMPLATE.md  COMANDOS_GIT_COMMIT.md  COMPARATIVA_FIBONACCI.md  COMPLETITUD_SISTEMA.md  ESTADO_PROYECTO.md  EVOLVER_FUNCIONAL_V1.3.1.txt  GENESIS_ARCHITECTURE.md  GENESIS_AURORA_INTEGRATION.md  GENESIS_FUNCIONAL_V1.3.3.txt  GENESIS_L3_INTEGRATION.md  GENESIS_MCP_README.md  GENESIS_QUICK_START.md  GENESIS_ROADMAP.md  GENESIS_V1.1_FINAL_REPORT.md  GENESIS_V1.2_FASE6_ARREGLADA.md  GENESIS_V1.2_RESUMEN_EJECUTIVO.md  GENESIS_V1.2_VISUAL_SUMMARY.txt  GENESIS_V1.3_FUNCIONAL_PURO.txt  GOVERNANCE_IMPLEMENTATION.md  GUIA_PRUEBAS_GENESIS_FUNCIONAL.md  INDEX.md  INDEX_COMPLETE.md  INTEGRACION_ARMONIZADOR.md  INTEGRACION_MCP_COMPLETADA.md  MAPEO_MANUAL_AURORA.md  MIGRACION_COMPLETADA.md  MODULOS_FUNCIONALES_RESUMEN.txt  PEPINO_ARCHETYPE.md  PLAN_MIGRACION_V1.3.3.md  PROGRESO_GENESIS_V1.1.md  PROYECTO_GENESIS.md  README.md  README_ADAPTIVE_ECONOMICS.md  README_AURORA_ENGINE.md  README_GENESIS.md  RECURSIVE_NETWORK_ARCHITECTURE.md  (+85 more)
Infrastructure/P2P/: CLOUDWATCH_LOGS_FIX.md  COMPLETE_GUIDE.md  FIX_CORS_403.md  IMPLEMENTATION_SUMMARY.md  README.md  REPUTATION_DESIGN.md  REPUTATION_SUMMARY.md  aurora_p2p_client.py  cloudformation.yaml  deploy.ps1  deploy.sh  discovery_client.py  example_p2p_network.py  example_usage.py  reputation_system.py  requirements.txt  test_client.py
assets/: README.md
js/: aurora-portal.js
wasm-client/: Cargo.toml  build.ps1
wasm-client/src/: agent.rs  blockchain.rs  crypto.rs  indexed_db.rs  lib.rs  models.rs  p2p.rs  passkey.rs  storage.rs
wasm-client/tests/: basic.rs
