[package]
name = "aurora-wasm-client"
version = "0.1.0"
authors = ["Aurora Program <contact@auroraprogram.org>"]
edition = "2021"
license = "Apache-2.0"
description = "Aurora Intelligence System - WASM client for P2P network interaction"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# getrandom with wasm support - force version and features for all dependencies
getrandom = { version = "0.2", features = ["js"] }

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Blob",
    "FileReader",
    "Storage",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "CryptoKeyPair",
    "JsonWebKey",
] }

# P2P networking - DISABLED for now due to WASM compatibility issues
# Will implement using WebSocket directly in Phase 1
# libp2p = { version = "0.53", default-features = false, features = [
#     "websocket",
#     "noise",
#     "yamux",
#     "gossipsub",
#     "kad",
#     "identify",
#     "ping",
#     "wasm-bindgen",
# ] }

# Async runtime for WASM
futures = "0.3"

# Cryptography
sha2 = "0.10"
# ed25519-dalek = "2.0"  # Temporarily disabled - uses getrandom 0.3
# rand = "0.8"  # Temporarily disabled - uses getrandom 0.3

# Logging
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary

# Configure build target for WASM
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
